; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_SSL_CTX_use_PrivateKey.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_rsa.c_SSL_CTX_use_PrivateKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SSL_F_SSL_CTX_USE_PRIVATEKEY = common dso_local global i32 0, align 4
@ERR_R_PASSED_NULL_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SSL_CTX_use_PrivateKey(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @SSL_F_SSL_CTX_USE_PRIVATEKEY, align 4
  %10 = load i32, i32* @ERR_R_PASSED_NULL_PARAMETER, align 4
  %11 = call i32 @SSLerr(i32 %9, i32 %10)
  store i32 0, i32* %3, align 4
  br label %18

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @ssl_set_pkey(i32 %15, i32* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %12, %8
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @SSLerr(i32, i32) #1

declare dso_local i32 @ssl_set_pkey(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
